# graphics-and-multimedia

./: .gitignore  README.md
00.Test-program/: .gitignore  MyPoint2D.cpp  MyPoint2D.h  MyWidget.cpp  MyWidget.h
01.Drawing-Simpe-Objects/01.Line-segment/: .gitignore  MyPoint2D.cpp  MyPoint2D.h  MyWidget.cpp  MyWidget.h
01.Drawing-Simpe-Objects/02.Circle/: .gitignore  Circle.cpp  LineSegment.cpp  MyWidget.cpp  MyWidget.h
01.Drawing-Simpe-Objects/03.Ellipse/: .gitignore  Ellipse.cpp  Ellipse.h  MyWidget.cpp  MyWidget.h
01.Drawing-Simpe-Objects/04.Bezier-curve/: .gitignore  BezierCurve.cpp  BezierCurve.h  MyWidget.cpp  MyWidget.h
01.Drawing-Simpe-Objects/05.B-spline-curve/: .gitignore  BSplineCurve.cpp  BSplineCurve.h  MyWidget.cpp  MyWidget.h
02.Filling-with-color/01.Flood-fill/: .gitignore  Circle.h  FloodFill.cpp  FloodFill.h  MyWidget.cpp  MyWidget.h  main.cpp
02.Filling-with-color/02.Scan-line/: .gitignore  LineSegment.h  MyPoint2D.cpp  MyPoint2D.h  MyWidget.cpp  MyWidget.h  ScanLine.cpp  ScanLine.h
03.Color-palette/: .gitignore  ColorPallete.cpp  ColorPallete.h  ColorPalleteVal.h  MyPoint2D.cpp  MyWidget.cpp  MyWidget.h  main.cpp
04.Blend-modes/: .gitignore  04.Blend-modes  BlendMode.h  Layer.cpp  Layer.h  MyWidget.cpp  MyWidget.h  main.cpp
05.Geometric-transformations-2D/: .gitignore  InterpolationMode.h  MyWidget.cpp  MyWidget.h  TransformationMatrix3x3.cpp  TransformationMatrix3x3.h  main.cpp
06.Texturing-of-triangles/: .gitignore  OriginalImageWidget.cpp  OriginalImageWidget.h  Triangle.cpp  TriangleTexturing.cpp  WithTexturingTriangleWidget.cpp  WithTexturingTriangleWidget.h  main.cpp
07.Geometric-transformations-3D/: .gitignore  main.cpp
07.Geometric-transformations-3D/includes/: Cube.h  Lighting.h  MyPoint2D.h  MyPoint3D.h  MyWidget.h  TransformationMatrix4x4.h  Triangle.h  Triangle3D.h  TriangleTexturing.h  Vector3D.h
08.Solar-System-PROJECT/: CMakeLists.txt  main.cpp
08.Solar-System-PROJECT/includes/: LineSegment.h  MilkyWay.h  MyPoint3D.h  MyWidget.h  Sphere.h  TransformationMatrix4x4.h  Triangle3D.h  TriangleTexturing.h
08.Solar-System-PROJECT/includes/2D/: LineSegment.h  MyPoint2D.h  Triangle.h
08.Solar-System-PROJECT/includes/3D/: MyPoint3D.h  Sphere.h  Triangle3D.h  Vector3D.h
08.Solar-System-PROJECT/includes/Matrices/: PlanetTransformationMatrix.h  SunTransformationMatrix.h  TransformationMatrix4x4.h
08.Solar-System-PROJECT/sources/: LineSegment.cpp  MilkyWay.cpp  MyPoint2D.cpp  MyPoint3D.cpp  MyWidget.cpp  Sphere.cpp  TransformationMatrix4x4.cpp  Triangle.cpp  Triangle3D.cpp  TriangleTexturing.cpp
08.Solar-System-PROJECT/sources/2D/: LineSegment.cpp  MyPoint2D.cpp  Triangle.cpp
08.Solar-System-PROJECT/sources/3D/: MyPoint3D.cpp  Sphere.cpp  Triangle3D.cpp  Vector3D.cpp
08.Solar-System-PROJECT/sources/Matrices/: PlanetTransformationMatrix.cpp  SunTransformationMatrix.cpp  TransformationMatrix4x4.cpp
(+10 files in other folders)
